[gd_scene load_steps=13 format=3 uid="uid://du8thrm6tprtu"]

[ext_resource type="Script" uid="uid://3182yer47iu3" path="res://script/player_1_color_1.gd" id="1_yfpg4"]
[ext_resource type="Texture2D" uid="uid://bel0feavc2a1c" path="res://assets/Boat3_water_animation_color1/Boat3_water_frame1.png" id="2_yfpg4"]
[ext_resource type="Texture2D" uid="uid://c8aptrme55p7l" path="res://assets/Boat3_water_animation_color1/Boat3_water_frame2.png" id="3_bskyf"]
[ext_resource type="Texture2D" uid="uid://bjqlyrclkjkfd" path="res://assets/Boat3_water_animation_color1/Boat3_water_frame3.png" id="4_ss5oa"]
[ext_resource type="Texture2D" uid="uid://c0tonty3xddqj" path="res://assets/Boat3_water_animation_color1/Boat3_water_frame4.png" id="5_c7b7p"]
[ext_resource type="PackedScene" uid="uid://dupiq34fn8h0m" path="res://scene/weapon_1_color_1.tscn" id="6_c13qa"]
[ext_resource type="Texture2D" uid="uid://cpl0qpnqy8tol" path="res://assets/Boats_color1/Boat_color1_1.png" id="7_ycfc6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5s1h1"]
size = Vector2(96, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_ml7e8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yfpg4")
}, {
"duration": 1.0,
"texture": ExtResource("3_bskyf")
}, {
"duration": 1.0,
"texture": ExtResource("4_ss5oa")
}, {
"duration": 1.0,
"texture": ExtResource("5_c7b7p")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oh5ij"]
size = Vector2(96, 80)

[sub_resource type="Gradient" id="Gradient_oh5ij"]
offsets = PackedFloat32Array(0, 0.671717, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.040404, 0.040404, 0.040404, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hp4bs"]
gradient = SubResource("Gradient_oh5ij")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player_1_color_1" type="CharacterBody2D"]
collision_mask = 7
script = ExtResource("1_yfpg4")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 100.0
debug_enabled = true
debug_path_custom_color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_5s1h1")

[node name="PathFinding_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = -1.5708
sprite_frames = SubResource("SpriteFrames_ml7e8")
animation = &"idle"
frame = 1
frame_progress = 0.178933

[node name="ProJectile_Collider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProJectile_Collider"]
shape = SubResource("RectangleShape2D_oh5ij")

[node name="Weapon_1_color_1" parent="." instance=ExtResource("6_c13qa")]
position = Vector2(23, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(24, 78)
rotation = 4.71239
texture = ExtResource("7_ycfc6")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(3, 5)
scale = Vector2(5.70313, 5.09375)
texture = SubResource("GradientTexture2D_hp4bs")

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="timeout" from="PathFinding_timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="ProJectile_Collider" to="." method="_on_projectile_collider_area_entered"]
